// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AllocationBars > Snapshot Tests > matches snapshot for large allocations 1`] = `
<div>
  <div
    class="h-full flex gap-1 transition-all duration-500 ease-out"
    style="width: 70%;"
  >
    <div
      class="h-full"
      style="flex: 40 1 0%;"
    >
      <div
        class="h-full w-full rounded-lg relative group overflow-hidden cursor-pointer"
        data-testid="composition-btc"
        style="background-color: rgba(247, 147, 26, 0.125); border: 1px solid rgba(247, 147, 26, 0.314);"
        whilehover="[object Object]"
      >
        <div
          class="absolute inset-0 flex flex-col items-center justify-center"
        >
          <span
            class="font-bold text-white text-lg"
          >
            BTC
          </span>
          <span
            class="text-xs text-gray-400 font-mono opacity-0 group-hover:opacity-100 transition-opacity"
          >
            40.00
            %
          </span>
        </div>
      </div>
    </div>
    <div
      class="h-full"
      style="flex: 30 1 0%;"
    >
      <div
        class="h-full w-full rounded-lg relative group overflow-hidden cursor-pointer"
        data-testid="composition-eth"
        style="background-color: rgba(98, 126, 234, 0.125); border: 1px solid rgba(98, 126, 234, 0.314);"
        whilehover="[object Object]"
      >
        <div
          class="absolute inset-0 flex flex-col items-center justify-center"
        >
          <span
            class="font-bold text-white text-lg"
          >
            ETH
          </span>
          <span
            class="text-xs text-gray-400 font-mono opacity-0 group-hover:opacity-100 transition-opacity"
          >
            30.00
            %
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="h-full"
    style="width: 30%;"
  >
    <div
      class="h-full w-full rounded-lg bg-emerald-500/10 border border-emerald-500/30 flex items-center justify-center relative group cursor-pointer"
      data-testid="composition-stables"
      whilehover="[object Object]"
    >
      <div
        class="text-center"
      >
        <span
          class="font-bold text-emerald-400 text-lg"
        >
          STABLES
        </span>
        <div
          class="text-xs text-emerald-500/60 font-mono opacity-0 group-hover:opacity-100 transition-opacity"
        >
          30.00
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AllocationBars > Snapshot Tests > matches snapshot for mixed allocations 1`] = `
<div>
  <div
    class="h-full flex gap-1 transition-all duration-500 ease-out"
    style="width: 45%;"
  >
    <div
      class="h-full"
      style="flex: 40 1 0%;"
    >
      <div
        class="h-full w-full rounded-lg relative group overflow-hidden cursor-pointer"
        data-testid="composition-btc"
        style="background-color: rgba(247, 147, 26, 0.125); border: 1px solid rgba(247, 147, 26, 0.314);"
        whilehover="[object Object]"
      >
        <div
          class="absolute inset-0 flex flex-col items-center justify-center"
        >
          <span
            class="font-bold text-white text-lg"
          >
            BTC
          </span>
          <span
            class="text-xs text-gray-400 font-mono opacity-0 group-hover:opacity-100 transition-opacity"
          >
            40.00
            %
          </span>
        </div>
      </div>
    </div>
    <div
      class="h-full"
      style="flex: 5 1 0%;"
    >
      <div
        class="relative h-full w-full"
      >
        <div
          class="h-full w-full rounded-lg relative group overflow-hidden cursor-pointer"
          data-testid="composition-alt"
          style="background-color: rgba(139, 92, 246, 0.125); border: 1px solid rgba(139, 92, 246, 0.314);"
          whilehover="[object Object]"
        />
      </div>
    </div>
  </div>
  <div
    class="h-full"
    style="width: 55%;"
  >
    <div
      class="h-full w-full rounded-lg bg-emerald-500/10 border border-emerald-500/30 flex items-center justify-center relative group cursor-pointer"
      data-testid="composition-stables"
      whilehover="[object Object]"
    >
      <div
        class="text-center"
      >
        <span
          class="font-bold text-emerald-400 text-lg"
        >
          STABLES
        </span>
        <div
          class="text-xs text-emerald-500/60 font-mono opacity-0 group-hover:opacity-100 transition-opacity"
        >
          55.00
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AllocationBars > Snapshot Tests > matches snapshot for small allocations 1`] = `
<div>
  <div
    class="h-full flex gap-1 transition-all duration-500 ease-out"
    style="width: 8%;"
  >
    <div
      class="h-full"
      style="flex: 5 1 0%;"
    >
      <div
        class="relative h-full w-full"
      >
        <div
          class="h-full w-full rounded-lg relative group overflow-hidden cursor-pointer"
          data-testid="composition-btc"
          style="background-color: rgba(247, 147, 26, 0.125); border: 1px solid rgba(247, 147, 26, 0.314);"
          whilehover="[object Object]"
        />
      </div>
    </div>
    <div
      class="h-full"
      style="flex: 3 1 0%;"
    >
      <div
        class="relative h-full w-full"
      >
        <div
          class="h-full w-full rounded-lg relative group overflow-hidden cursor-pointer"
          data-testid="composition-eth"
          style="background-color: rgba(98, 126, 234, 0.125); border: 1px solid rgba(98, 126, 234, 0.314);"
          whilehover="[object Object]"
        />
      </div>
    </div>
  </div>
  <div
    class="h-full"
    style="width: 92%;"
  >
    <div
      class="h-full w-full rounded-lg bg-emerald-500/10 border border-emerald-500/30 flex items-center justify-center relative group cursor-pointer"
      data-testid="composition-stables"
      whilehover="[object Object]"
    >
      <div
        class="text-center"
      >
        <span
          class="font-bold text-emerald-400 text-lg"
        >
          STABLES
        </span>
        <div
          class="text-xs text-emerald-500/60 font-mono opacity-0 group-hover:opacity-100 transition-opacity"
        >
          92.00
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;
